--- a/frontend/mtg/src/GuessTheMtgCard.css
+++ b/frontend/mtg/src/GuessTheMtgCard.css
@@ -20,3 +20,9 @@
     justify-content: center;
     align-items: center;
 }
+
+.solutionContainer {
+    height:400px, ;
+    width : 700px ; 
+    padding:10 ;
+}
