--- a/frontend/mtg/src/ProgressBar.css
+++ b/frontend/mtg/src/ProgressBar.css
@@ -18,13 +18,13 @@
     width: 30;
     flex: 1;
     border-radius: 0px;
-    background-color: green;
+    background-color: #c7c7c7;
 }
 
 
 .actionButton {
-    height: 30;
-    width: 30;
+    height: 40px;
+    width: 100px;
     flex: 1;
     border-radius: 0px;
     padding: 10px;
