--- a/frontend/mtg/src/index.css
+++ b/frontend/mtg/src/index.css
@@ -31,7 +31,12 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.8em;
+  line-height: 1.1;
+}
+
+h3 {
+  font-size: 1.3em;
   line-height: 1.1;
 }
 
@@ -47,7 +52,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #cdcdcf;
 }
 button:focus,
 button:focus-visible {
