--- a/frontend/mtg/src/ProgressBar.css
+++ b/frontend/mtg/src/ProgressBar.css
@@ -11,6 +11,8 @@
     width: 30;
     flex: 1;
     border-radius: 0px;
+    background-color: #fbfbfb;
+    color: #000000;
 }
 
 .currentProgressButton {
@@ -18,7 +20,9 @@
     width: 30;
     flex: 1;
     border-radius: 0px;
-    background-color: #c7c7c7;
+    background-color: #dcdcdc;
+    color: #000000;
+ 
 }
 
 
@@ -28,6 +32,9 @@
     flex: 1;
     border-radius: 0px;
     padding: 10px;
+    background-color: #fbfbfb;
+    color: #000000;   
 }
+
 
 
