--- a/frontend/mtg/src/Searchbar.css
+++ b/frontend/mtg/src/Searchbar.css
@@ -1,7 +1,9 @@
 /* Style for the search container */
 .search-container {
     position: relative;
-    width: 80%;
+    justify-content: center;
+    align-items: center;
+    width: 80%;  
 }
 
 .inputarea {
