--- a/frontend/mtg/src/ProgressBar.css
+++ b/frontend/mtg/src/ProgressBar.css
@@ -3,10 +3,11 @@
     align-items: center;
     display: flex;
     justify-content: center;
-    margin: 4px;
+    
 }
 
 .progressButton {
+    width: 100%;
     height: 30;
     width: 30;
     flex: 1;
