--- a/frontend/mtg/src/Hint.css
+++ b/frontend/mtg/src/Hint.css
@@ -1,3 +1,5 @@
+/*Hint.css*/
+
 .hintContainer {
     display: flex;
     align-items: center;
@@ -5,10 +7,16 @@
     justify-content: center;
     height: 50vh;
     width: 50vh;
+    color: black;
 }
 
 .imageContainer {
+    display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    gap: 10px; 
+    padding: 10px;
+    width: 100%;
+    max-width: 480px; 
 }
+
